Improved race leaderboard style.